--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "url": "https://github.com/johnpapa/typescript-async/issues"
   },
   "homepage": "https://github.com/johnpapa/typescript-async#readme",
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^1.2.2"
+  },
   "devDependencies": {
     "eslint": "^6.7.0",
     "prettier": "^1.19.1"
